--- a/.github/ISSUE_TEMPLATE/problem-report.yml
+++ b/.github/ISSUE_TEMPLATE/problem-report.yml
@@ -5,7 +5,7 @@ body:
 - type: markdown
   attributes:
     value: |
-      Before reporting an issue, [please search](https://github.com/VVerson/Flame/issues) to make sure it has not already been reported. 
+      Before reporting an issue, [please search](https://github.com/VVerson/Box/issues) to make sure it has not already been reported. 
 
 - type: textarea
   attributes:
